test/spec_vectors/br_on_cast_fail/fail/module_4.wat
(module (type $t (struct)) (func (param (ref any)) (result (ref any)) (block (result (ref null $t)) (br_on_cast_fail 1 (ref any) (ref null $t) (local.get 0))) (ref.as_non_null)))